--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-This is my personal Github Pages site.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>This is my personal Github Pages site.</title>
+    </head>
+</html>
