--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>This is my personal Github Pages site.</title>
-    </head>
-</html>
+This is my personal Github Pages site.
