change images path

--- a/Week 2/Ex2-Fruits.html
+++ b/Week 2/Ex2-Fruits.html
@@ -8,23 +8,23 @@
     <body>
         <p>
             <h1> Fruits:</h1>
-            <img src="Anh/banana.png" /> 
-            <img src="Anh/orange.png" /> 
-            <img src="Anh/kiwi.png" /> 
-            <img src="Anh/kiwi.png" />
-            <img src="Anh/apple.png" />
+            <img src="Anh-ex2/banana.png" /> 
+            <img src="Anh-ex2/orange.png" /> 
+            <img src="Anh-ex2/kiwi.png" /> 
+            <img src="Anh-ex2/kiwi.png" />
+            <img src="Anh-ex2/apple.png" />
         </p>
         <p>
-            <img src="Anh/apple.png" /> 
-            <img src="Anh/apple.png" />
-            <img src="Anh/banana.png" /> 
-            <img src="Anh/kiwi.png" /> 
-            <img src="Anh/orange.png" /> 
+            <img src="Anh-ex2/apple.png" /> 
+            <img src="Anh-ex2/apple.png" />
+            <img src="Anh-ex2/banana.png" /> 
+            <img src="Anh-ex2/kiwi.png" /> 
+            <img src="Anh-ex2/orange.png" /> 
         </p>
     </p>
-    <img src="Anh/orange.png" /> 
-    <img src="Anh/banana.png" /> 
-    <img src="Anh/orange.png" />
-    <img src="Anh/orange.png" /> 
-    <img src="Anh/apple.png" />
+    <img src="Anh-ex2/orange.png" /> 
+    <img src="Anh-ex2/banana.png" /> 
+    <img src="Anh-ex2/orange.png" />
+    <img src="Anh-ex2/orange.png" /> 
+    <img src="Anh-ex2/apple.png" />
     </body>
