fix image ex2 show

--- a/Week 2/Ex2-Fruits.html
+++ b/Week 2/Ex2-Fruits.html
@@ -6,25 +6,27 @@
         <title>Fruit</title>
     </head>
     <body>
+        <h1>Fruits:</h1>
         <p>
-            <h1> Fruits:</h1>
-            <img src="Anh-ex2/banana.png" /> 
-            <img src="Anh-ex2/orange.png" /> 
-            <img src="Anh-ex2/kiwi.png" /> 
-            <img src="Anh-ex2/kiwi.png" />
-            <img src="Anh-ex2/apple.png" />
+            <img src="./Anh-ex2/banana.png" /> 
+            <img src="./Anh-ex2/orange.png" /> 
+            <img src="./Anh-ex2/kiwi.png" /> 
+            <img src="./Anh-ex2/kiwi.png" />
+            <img src="./Anh-ex2/apple.png" />
         </p>
         <p>
-            <img src="Anh-ex2/apple.png" /> 
-            <img src="Anh-ex2/apple.png" />
-            <img src="Anh-ex2/banana.png" /> 
-            <img src="Anh-ex2/kiwi.png" /> 
-            <img src="Anh-ex2/orange.png" /> 
+            <img src="./Anh-ex2/apple.png" /> 
+            <img src="./Anh-ex2/apple.png" />
+            <img src="./Anh-ex2/banana.png" /> 
+            <img src="./Anh-ex2/kiwi.png" /> 
+            <img src="./Anh-ex2/orange.png" /> 
         </p>
-    </p>
-    <img src="Anh-ex2/orange.png" /> 
-    <img src="Anh-ex2/banana.png" /> 
-    <img src="Anh-ex2/orange.png" />
-    <img src="Anh-ex2/orange.png" /> 
-    <img src="Anh-ex2/apple.png" />
+        <p>
+            <img src="./Anh-ex2/orange.png" /> 
+            <img src="./Anh-ex2/banana.png" /> 
+            <img src="./Anh-ex2/orange.png" />
+            <img src="./Anh-ex2/orange.png" /> 
+            <img src="./Anh-ex2/apple.png" />
+        </p>
     </body>
+</html>
