--- a/Week 2/Ex3-BearWikiPage.html
+++ b/Week 2/Ex3-BearWikiPage.html
@@ -38,6 +38,6 @@
                     </ol>
                 </dd>
             </dl>
-            <img src="ANh-ex3/bear.jpg" />
+            <img src="Anh-ex3/bear.jpg" />
         </p>
         </body>
