--- a/Week 3/CV.html
+++ b/Week 3/CV.html
@@ -7,32 +7,42 @@
   </head>
   <body>
     <h1>Lê Xuân Khánh</h1>
-    <p>
-      Address: 12/N23, tổ dân phố 12, ngách 60 ngõ 445 Lạc Long Quân <br>
-      Phone number: 0868280266 <br>
-      Email: xkhanhle228@gmail.com
-    </p>
-    <hr>
-    <h1>Introduction</h1>
-    <p>
-      I am a technology enthusiast, eager to learn and responsible in work. <br>
-      I want to develop my career in the IT field.
-    </p>
-    <hr>
-    <h1>Experience</h1>
-    <p>
-      Java subject: Building Parking management system. <br>
-      </p>
-    <hr>
-    <h1>Education</h1>
-    <p>
-      Still studing in International school - VNUIS
-    </p>
-    <hr>
-    <h1>Skills</h1>
-    <p>
-      - Programming language: Python <br>
-      - Teamworking.
-    </p>
+    <!-- Ảnh cá nhân -->
+    <img src="../Week 2/Anh-ex3/bear.jpg" alt="Ảnh cá nhân" style="width:150px;height:auto;border-radius:50%;margin-bottom:16px;">
+    <ol type="I">
+      <li>Thông tin cá nhân
+        <ul>
+          <li>Address: 12/N23, tổ dân phố 12, ngách 60 ngõ 445 Lạc Long Quân</li>
+          <li>Phone number: 0868280266</li>
+          <li>Email: xkhanhle228@gmail.com</li>
+        </ul>
+      </li>
+      <li>Introduction
+        <ul>
+          <li>I am a technology enthusiast, eager to learn and responsible in work.</li>
+          <li>I want to develop my career in the IT field.</li>
+        </ul>
+      </li>
+      <li>Experience
+        <ul>
+          <li>Java subject:
+            <ul>
+              <li>Building Parking management system.</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>Education
+        <ul>
+          <li>Still studying in International school - VNUIS</li>
+        </ul>
+      </li>
+      <li>Skills
+        <ul>
+          <li>Programming language: Python</li>
+          <li>Teamworking</li>
+        </ul>
+      </li>
+    </ol>
   </body>
 </html>
