--- a/Week 3/CV.html
+++ b/Week 3/CV.html
@@ -25,11 +25,8 @@
       </li>
       <li>Experience
         <ul>
-          <li>Java subject:
-            <ul>
-              <li>Building Parking management system.</li>
-            </ul>
-          </li>
+          <li>Java subject:Building Parking management system.</li>
+          <li>AI: Using CNN and CBIR to idetify fast food </li>
         </ul>
       </li>
       <li>Education
