--- a/week 4/wiki-page.html
+++ b/week 4/wiki-page.html
@@ -23,6 +23,6 @@
     <li>United States</li>
     <li>Canada</li>
   </ol>
-  <img src="../Week 2/Anh-ex3/bear.jpg" alt="Brown Bear" style="max-width:400px;width:100%;height:auto;display:block;margin:20px auto;">
+  <img src="../Week 4/bear/bear.jpg" alt="Brown Bear" style="max-width:400px;width:100%;height:auto;display:block;margin:20px auto;">
 </body>
 </html>
