--- a/Week 3/CV.html
+++ b/Week 3/CV.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>Lê Xuân Khánh</h1>
-  <img src="../Week 2/Anh-ex3/bear.jpg" alt="Ảnh cá nhân">
+  <img src="./week 4/bear.jpg" alt="Ảnh cá nhân">
 
   <section>
     <h2>Thông tin cá nhân</h2>
@@ -100,12 +100,17 @@
     <details open>
       <summary>Xem dự án</summary>
       <ul>
-        <li>
-          <strong>Parking Management System</strong> – Java  
-          <p>Ứng dụng quản lý bãi đỗ xe với các chức năng thêm xe, thanh toán, quản lý dữ liệu.</p>
-          <iframe width="560" height="315" src="https://youtu.be/u_05vOnk8cg?si=JBr_PlG2u4rEiw2S"
-            title="Demo Parking Project" frameborder="0" allowfullscreen></iframe>
-        </li>
+      <li>
+  <strong>Fast Food Recognition</strong> – AI (CNN + CBIR)  
+  <p>Mô hình nhận diện đồ ăn nhanh, hỗ trợ tìm kiếm ảnh theo nội dung.</p>
+  <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/u_05vOnk8cg"
+    title="Demo AI Project"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</li>
        <li>
   <strong>Fast Food Recognition</strong> – AI (CNN + CBIR)  
   <p>Mô hình nhận diện đồ ăn nhanh, hỗ trợ tìm kiếm ảnh theo nội dung.</p>
@@ -116,7 +121,6 @@
     </a>
   </p>
 </li>
-
       </ul>
     </details>
   </section>
