--- a/Week 3/CV.html
+++ b/Week 3/CV.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>Lê Xuân Khánh</h1>
-  <img src="./week 4/bear.jpg" alt="Ảnh cá nhân">
+  <img src="../week 4/bear.jpg" alt="Ảnh cá nhân">
 
   <section>
     <h2>Thông tin cá nhân</h2>
