--- a/Week 3/CV.html
+++ b/Week 3/CV.html
@@ -19,7 +19,9 @@
   </nav>
 
   <h1 style="text-align: center; margin-bottom: 10px; color: #1a5276; font-size: 2.5em; font-weight: 700; letter-spacing: 1px;">Lê Xuân Khánh</h1>
+  <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 20px;">
   <img src="../week 4/bear.jpg" alt="Ảnh cá nhân" class="cv-avatar">
+  </div>
 
   <section class="cv-section">
     <p class="underline">Thông tin cá nhân</p>
