--- a/Week 7/Nav-week7/Nav_week7.html
+++ b/Week 7/Nav-week7/Nav_week7.html
@@ -14,7 +14,7 @@
         }
 
         #logo {
-            padding: 20px 0 0 50px;
+            padding: 20px 0 0 50px; /* top right bottom left */
         }
 
         #menu_top {
@@ -73,7 +73,7 @@
         .level2 li:hover {
             background: #cc0; 
         }
-        </style>
+    </style>
 
 </head>
 
