--- a/week 27th Nov/DOM events/The onload and onunload Events.html
+++ b/week 27th Nov/DOM events/The onload and onunload Events.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>JavaScript HTML Events</h1>
-<h2>The onclick Events</h2>
+<body onload="checkCookies()">
 
-<p>Click "Try it" to execute the displayDate() function.</p>
-<button id="myBtn">Try it</button>
+<h1>JavaScript HTML Events</h1>
+<h2>The onload Attribute</h2>
 
 <p id="demo"></p>
 
 <script>
-document.getElementById("myBtn").onclick = displayDate;
-
-function displayDate() {
-  document.getElementById("demo").innerHTML = Date();
+function checkCookies() {
+  let text = "";
+  if (navigator.cookieEnabled == true) {
+    text = "Cookies are enabled.";
+  } else {
+    text = "Cookies are not enabled.";
+  }
+  document.getElementById("demo").innerHTML = text;
 }
 </script>
 
